--- a/www/styles.css
+++ b/www/styles.css
@@ -63,6 +63,7 @@ body {
     font-size:20px;
     border-radius:15px;
     padding: 10px 20px;
+    box-shadow: 2px 3px 7px -1px rgba(0,0,0,0.48);
 }
 
 .JoinButton {
